--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -185,6 +185,10 @@
         text-align: center;
     }
 
+    .smalltitle {
+        font-size: 2rem;
+    }
+
     .titlediv {
         margin: 0 1.5rem;
     }
