--- a/components/project/Project.module.css
+++ b/components/project/Project.module.css
@@ -9,6 +9,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: fit-content;
 }
 
 .project:hover {
