--- a/styles/Library.module.css
+++ b/styles/Library.module.css
@@ -19,7 +19,7 @@
 
 .content {
     width: 70vw;
-    height: fit-content;
+    min-height: 40vh;
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     margin-bottom: -5rem;
