--- a/styles/Workbook.module.css
+++ b/styles/Workbook.module.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap");
-
 .main {
     min-height: 100vh;
     display: flex;
@@ -8,17 +6,55 @@
     align-items: center;
 }
 
-.title {
+.content {
+    width: 70vw;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    margin-bottom: -5rem;
+    margin-top: 2rem;
+}
+
+.header {
+    text-align: left;
+    font-size: 1.2rem;
     margin: 0;
-    font-size: 6rem;
-    text-align: center;
-    width: 80%;
-    font-family: "Inter", sans-serif;
-    font-size: 3rem;
+    margin-top: 1rem;
+}
+
+.paragraph {
+    margin: 0.5rem 0;
+    text-align: left;
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+.link {
+    color: #ffb13d;
+    font-weight: bold;
+}
+
+.highlight {
+    background-color: #000;
+    color: #ffb13d;
+    padding: 0.1rem 0.3rem;
+    border-radius: 0.3rem;
 }
 
 @media (max-width: 600px) {
-    .title {
-        font-size: 2rem;
+    .content {
+        width: 80vw;
+        margin-bottom: 0;
+        margin-top: 1rem;
+    }
+
+    .header {
+        font-size: 1rem;
+    }
+
+    .paragraph {
+        font-size: 0.8rem;
     }
 }
