--- a/components/workbook/title/Title.module.css
+++ b/components/workbook/title/Title.module.css
@@ -13,7 +13,8 @@
 }
 
 .title,
-.subtitle {
+.subtitle,
+.date {
     margin: 0;
     text-align: center;
     font-size: 1.5rem;
@@ -23,9 +24,14 @@
     font-family: "Inter", sans-serif;
 }
 
-.subtitle {
+.subtitle,
+.date {
     margin-top: 0.5rem;
     font-size: 1.2rem;
+}
+
+.date {
+    font-size: 1rem;
 }
 
 .textGreen {
@@ -54,5 +60,9 @@
 
     .subtitle {
         font-size: 0.8rem;
+    }
+
+    .date {
+        font-size: 0.6rem;
     }
 }
