--- a/styles/custom-ch.css
+++ b/styles/custom-ch.css
@@ -3,9 +3,23 @@
 .ch-preview {
     overflow-x: scroll !important;
     width: 70vw !important;
+    font-size: 1rem !important;
 }
 
 .ch-code-scroll-parent,
 .ch-code-scroll-content {
-    background-color: #22272f;
+    background-color: #22272f !important;
+}
+
+@media (max-width: 600px) {
+    .ch-codeblock,
+    .ch-codegroup,
+    .ch-preview {
+        overflow-x: scroll !important;
+        width: 80vw !important;
+    }
+
+    .ch-code-scroll-content {
+        font-size: 0.8rem !important;
+    }
 }
