--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,34 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap");
 
+:root,
+body[data-theme="light"] {
+    --color-bg: #fff;
+    --color-bg-box: #000;
+    --color-text: #111827;
+    --color-text-box: #e3e3e3;
+    --color-toggle: #15232d;
+    --color-shadow: #0000001a;
+}
+
+body[data-theme="dark"] {
+    --color-bg: #000;
+    --color-bg-box: #232324;
+    --color-text: #e3e3e3;
+    --color-text-box: #e3e3e3;
+    --color-toggle: #ffb13d;
+    --color-shadow: #ffb13d4d;
+}
+
 html,
 body {
     padding: 0;
     margin: 0;
     font-family: "Inter", sans-serif;
-    background-color: #fff;
-    color: #111827;
+    background-color: var(--color-bg);
+    color: var(--color-text);
     overflow-x: hidden;
     scroll-behavior: smooth;
+    transition: background-color 0.25s ease-in-out;
 }
 
 a {
