--- a/components/workbook/title/Title.module.css
+++ b/components/workbook/title/Title.module.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     padding: 1rem 0.5rem;
     border-radius: 0.5rem;
-    background-color: #000;
+    background-color: var(--color-bg-box);
     color: #fff;
 }
 
