--- a/styles/Workbook.module.css
+++ b/styles/Workbook.module.css
@@ -47,7 +47,7 @@
 }
 
 .highlight {
-    background-color: #000;
+    background-color: var(--color-bg-box);
     color: #ffb13d;
     padding: 0.1rem 0.3rem;
     border-radius: 0.3rem;
