--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -70,7 +70,7 @@
     border-radius: 0.4rem;
     transition: 0.3s;
     border: none;
-    box-shadow: 0 0 10px 4px var(--color-shadow);
+    box-shadow: var(--shadow);
     font-size: 1.5rem;
     padding: 0.5rem 1rem;
 }
@@ -85,7 +85,7 @@
 
 .button:hover,
 .buttonwhite:hover {
-    box-shadow: 0 0 20px 8px var(--color-shadow);
+    box-shadow: var(--shadow-hover);
 }
 
 .grid {
