--- a/components/footer/Footer.module.css
+++ b/components/footer/Footer.module.css
@@ -1,24 +1,34 @@
 .footercontainer {
     width: 80vw;
+    height: fit-content;
     display: block;
-}
-
-.footer, .footermobile {
-    display: grid;
-    grid-template-columns: 50% 25% 25%;
-    width: 100%;
+    border-top: var(--color-text) solid 1px;
     margin-top: 10rem;
     margin-bottom: 3rem;
-    font-size: 1rem;
-    border-top: #696969 solid 1px;
-    padding-top: 3rem;
+    display: flex;
     align-items: center;
-    justify-items: center;
+    justify-content: center;
+    flex-direction: column;
+    row-gap: 3rem;
+}
+
+.footer {
+    display: grid;
+    width: 80%;
+    grid-template-columns: 50% 25% 25%;
 }
 
 .footermobile {
     width: 80vw;
     display: none;
+}
+
+.footer,
+.footermobile {
+    font-size: 1rem;
+    padding-top: 3rem;
+    align-items: center;
+    justify-items: center;
 }
 
 .footeritemcol,
@@ -55,16 +65,10 @@
     color: #ffb13d;
 }
 
-.bottom {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
+.copyright {
     text-align: center;
-    font-size: 1rem;
-    margin-bottom: 1rem;
-    row-gap: 1rem;
+    font-size: 0.8rem;
+    margin-top: -2rem;
 }
 
 @media (max-width: 600px) {
@@ -76,7 +80,9 @@
         display: grid;
         grid-template-columns: repeat(1, minmax(0, 1fr));
         margin-top: 5rem;
+        margin-bottom: 2rem;
         font-size: 0.7rem;
+        border-top: var(--color-text) solid 1px;
     }
 
     .subfooter {
@@ -93,8 +99,8 @@
         width: 50%;
     }
 
-    .bottom {
-        font-size: 0.7rem;
-        margin-bottom: 0.1rem;
+    .copyright {
+        margin-top: 1rem;
+        font-size: 0.5rem;
     }
 }
