--- a/components/popup/Popup.module.css
+++ b/components/popup/Popup.module.css
@@ -6,10 +6,14 @@
     top: 30%;
     left: 50%;
     transform: translate(-50%, 0);
+    height: fit-content;
+    width: 50vw;
+    overflow-y: auto;
+    overflow-x: hidden;
     border-radius: 1rem;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
     background-color: #ffb13dd0;
     border-radius: 16px;
@@ -50,6 +54,7 @@
     margin: 0.5rem 0;
     padding: 0 0.5rem;
     width: 100%;
+    margin-bottom: 2rem;
 }
 
 .close {
@@ -62,4 +67,11 @@
     border: none;
     font-weight: bolder;
     font-size: 1.5rem;
+}
+
+@media (max-width: 600px) {
+    .popup {
+        width: 90vw;
+        height: 50vh;
+    }
 }
