--- a/components/topnav/Topnav.module.css
+++ b/components/topnav/Topnav.module.css
@@ -34,7 +34,7 @@
 }
 
 .speciallink {
-    color: #1f2937;
+    color: #111827;
     background-color: #ffb13d;
     border: none;
     border-radius: 0.4rem;
