--- a/styles/Workbook.module.css
+++ b/styles/Workbook.module.css
@@ -53,6 +53,22 @@
     border-radius: 0.3rem;
 }
 
+.loadingDiv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+    margin: 3rem 0;
+    column-gap: 100px;
+}
+
+.loadingDot {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
+
 @media (max-width: 600px) {
     .content {
         width: 80vw;
