--- a/styles/Library.module.css
+++ b/styles/Library.module.css
@@ -25,9 +25,15 @@
 }
 
 .alert {
+    width: fit-content;
+    background-color: #ffb13d7a;
+    width: 50vw;
+    padding: 0.5rem;
     margin: 0;
+    margin-bottom: 1rem;
     font-size: 1rem;
     text-align: center;
+    border-radius: 0.5rem;
 }
 
 .content {
@@ -41,28 +47,65 @@
     margin-top: 2rem;
 }
 
-.inputContainer {
+.fields {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    row-gap: 1rem;
     width: 50vw;
+    margin: 1rem 0;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+    column-gap: 1rem;
+}
+
+.inputLabel {
+    font-size: 1rem;
     margin: 0;
-    margin-top: 1rem;
+    width: 10%;
+    font-weight: bold;
+}
+
+.difficulties {
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    flex-direction: row;
+    column-gap: 1rem;
+}
+
+.difficulty {
+    outline: none;
+    background-color: #ffb13d;
+    border: 1px solid var(--color-text);
+    border-radius: 0.5rem;
+    color: #1f2937;
+    height: 30px;
+    cursor: pointer;
+    font-size: 1rem;
 }
 
 .input {
-    width: 95%;
+    width: 90%;
     padding: 0.3rem 0.5rem;
     outline: none;
     background-color: var(--color-bg);
     border: 1px var(--color-text) solid;
-    border-radius: 0.4rem;
+    border-radius: 0.5rem;
     font-size: 1rem;
     color: var(--color-text);
+    height: 30px;
 }
 
 .input:focus {
-    border-color: #ffb13d;
+    border-color: #ffb13d !important;
 }
 
 .info,
@@ -88,7 +131,7 @@
     cursor: pointer;
     outline: none;
     border: none;
-    border-radius: 0.4rem;
+    border-radius: 0.5rem;
     color: #1f2937;
     background-color: #ffb13d;
     padding: 0.3rem 0.8rem;
@@ -99,6 +142,37 @@
 .button:hover,
 .button:focus {
     box-shadow: 0 0 5px 2px #ffb13d;
+}
+
+@media (max-width: 1300px) {
+    .fields,
+    .alert {
+        width: 70vw;
+    }
+}
+
+@media (max-width: 1000px) {
+    .container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .inputLabel {
+        width: 100%;
+        margin-bottom: 0.5rem;
+    }
+
+    .difficulties {
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+        justify-items: center;
+        width: 100%;
+        row-gap: 0.5rem;
+    }
+
+    .difficulty,
+    .input {
+        width: 100%;
+    }
 }
 
 @media (max-width: 600px) {
@@ -120,13 +194,9 @@
         margin-top: 1rem;
     }
 
-    .inputContainer {
+    .fields,
+    .alert {
         width: 80vw;
-    }
-
-    .input {
-        width: 90%;
-        font-size: 0.8rem;
     }
 
     .info,
@@ -139,7 +209,10 @@
         font-size: 1rem;
     }
 
-    .alert {
+    .alert,
+    .inputLabel,
+    .input,
+    .difficulty {
         font-size: 0.8rem;
     }
 }
