--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,9 +1,6 @@
 ---
-import { inject } from "@vercel/analytics";
 // import Footer from "../components/Footer.astro";
 // import Topnav from "../components/topnav/Topnav.astro";
-
-inject();
 
 export interface Props {
     title: string;
@@ -49,7 +46,7 @@ const { title, description, url } = Astro.props;
             content="/favicons/browserconfig.xml?v=2"
         />
         <meta name="theme-color" content="#ffb13d" />
-
+        <script defer src="/_vercel/insights/script.js"></script>
         <meta name="generator" content={Astro.generator} />
 
         <title>{title}</title>
